--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ header {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url('1.png') no-repeat center center;
+    background: url('1.jpg') no-repeat center center;
     background-size: cover;
 }
 
